fix: overflow inputs and remove linear-gradient to body

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ select:focus {
 body {
     font-family: 'Recursive', sans-serif;
     font-weight: 400;
-    background: linear-gradient(to right, #fff 50%, #f2f2f2 50%);
+    background: #f5f5f5;
     min-height: 100vh;
     color: hsl(0, 0%, 25%);
 }
@@ -41,14 +41,18 @@ body {
 
 .playground {
     display: flex;
-    height: 100vh;
-    gap: 1rem;
+    min-height: 100vh;
+}
+
+@media screen and (width < 670px) {
+    .playground {
+        flex-direction: column;
+    }
 }
 
 .playground>* {
     flex: 1;
-    height: 100%;
-    padding: 1rem;
+    padding: 1.5rem;
 }
 
 .playground__viewver {
@@ -56,6 +60,7 @@ body {
     display: grid;
     place-content: center;
     overflow: hidden;
+    background-color: hsl(0, 0%, 90%);
 }
 
 .shape {
@@ -157,10 +162,10 @@ input::placeholder {
 
 .field-values {
     display: flex;
-    width: 350px;
+    max-width: 350px;
     height: 2rem;
     border: 1px solid #bbb;
-    border-radius: 4px 0 0 4px;
+    border-radius: .25rem;
     color: #666;
     padding-inline: .5rem;
     gap: 2rem;
@@ -202,6 +207,5 @@ input::placeholder {
 }
 
 .output .hljs-attribute {
-    /* color: #01c2b1; */
     color: #5a4bb1;
 }
